// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fab组件 快照测试 基本使用 1`] = `
<div
  className="sc-bdvvtL cuXNUk"
>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN cLlSvA sinoui-fab"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 指定不同颜色 1`] = `
<div
  className="sc-bdvvtL cuXNUk"
>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN cLlSvA sinoui-fab"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN geglXf sinoui-fab"
    color="secondary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN lmcUBm sinoui-fab"
    color="error"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN gCEGMb sinoui-fab"
    color="warning"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN fgKJaX sinoui-fab"
    color="info"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN eJmBxX sinoui-fab"
    color="success"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN lmdSQq sinoui-fab"
    color="actionActive"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN dsSDbg sinoui-fab"
    color="actionDisabled"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置不可用状态 1`] = `
<div
  className="sc-bdvvtL cuXNUk"
>
  <button
    aria-disabled={true}
    className="sc-gsDKAQ bxyrTn sinoui-base-button sc-dkPtRN cLlSvA sinoui-fab sinoui-fab--disabled"
    color="primary"
    disabled={true}
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置扩展样式 1`] = `
<div
  className="sc-bdvvtL cuXNUk"
>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN wjcUj sinoui-fab sinoui-fab--extended"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;

exports[`Fab组件 快照测试 设置较小显示 1`] = `
<div
  className="sc-bdvvtL cuXNUk"
>
  <button
    className="sc-gsDKAQ WZUMy sinoui-base-button sc-dkPtRN jozFIg sinoui-fab sinoui-fab--mini"
    color="primary"
    role="button"
    type="button"
  >
    <svg
      fill="currentColor"
      height="1em"
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
      />
    </svg>
  </button>
</div>
`;
